# hyperdict

./: .gitignore  LICENSE  pyproject.toml  readme.md  setup.py
.github/workflows/: ci.yml
examples/: fork.py  mccoydj1.py  mccoydj1_nested.py  nested.py  oop.py  parallel.py  recover_from_stale_lock.py  recover_from_stale_lock_manual.py  simple.py
src/hyperdict/: __init__.py  _errors.py  _hyperdict.py  errors.py  errors.pyi
tests/: tests.py
tests/performance/: performance.py
